[package]
name = "ashmaize-webdemo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ashmaize = { path = "../.." }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
log = "0.4.27"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
